tests/transpiler/x/swift/map_nested_assign.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden3486495249/045/main.swift:3:13: error: value of optional type '[String : Int]?' must be unwrapped to refer to member 'subscript' of wrapped base type '[String : Int]'
1 | // Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:17 GMT+7
2 | var data = ["outer": ["inner": 1]]
3 | data["outer"]["inner"] = 2
  |             |- error: value of optional type '[String : Int]?' must be unwrapped to refer to member 'subscript' of wrapped base type '[String : Int]'
  |             |- note: chain the optional using '?' to access member 'subscript' only for non-'nil' base values
  |             `- note: force-unwrap using '!' to abort execution if the optional value contains 'nil'
4 | print(data["outer"]!["inner"]!)
5 | 
