tests/transpiler/x/swift/map_nested_assign.swift
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 07:21:17 GMT+7
var data = ["outer": ["inner": 1]]
data["outer"]["inner"] = 2
print(data["outer"]!["inner"]!)
